# virus-response-sim

./: .gitignore  CMakeLists.txt  readme.md  vcpkg.json
cmake/: code_analysis.cmake
libs/simulation/: CMakeLists.txt
libs/simulation/include/simulation/: Simulation.hpp
libs/simulation/src/: Simulation.cpp
libs/simulation/tests/: CMakeLists.txt  simple.cpp  test_main.cpp
products/virus_response_sim/: CMakeLists.txt
products/virus_response_sim/include/virus_response_sim/: Platform.hpp
products/virus_response_sim/src/: Platform.cpp  main.cpp
